--- a/domain.yml
+++ b/domain.yml
@@ -3,14 +3,22 @@ version: "3.1"
 intents:
   - ask_graduation_data
   - inform_graduation_data
+  - ask_research_data
+  - inform_research_data
+  - ask_activity_data
+  - inform_activity_data
+  - ask_ipk_data
+  - inform_ipk_data
 
 entities:
   - year
   - year_start
   - year_end
+  - year_range
   - major
   - faculty
   - period
+  - cohort
 
 slots:
   year:
@@ -34,6 +42,13 @@ slots:
       - type: from_entity
         entity: year_end
 
+  year_range: 
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: from_entity
+        entity: year_range
+
   major:
     type: text
     influence_conversation: false
@@ -54,21 +69,20 @@ slots:
     mappings:
       - type: from_entity
         entity: period
-
-responses:
-  utter_ask_year:
-    - text: "Tahun :"
-  utter_ask_jurusan:
-    - text: "Jurusan :"
-  utter_ask_faculty:
-    - text: "Fakultas:"
-  utter_ask_period:
-    - text: "Periode:"
-  utter_ask_year_start:
-    - text: "Tahun mulai:"
-  utter_ask_year_end:
-    - text: "Tahun selesai:"
+  
+  cohort:
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: from_entity
+        entity: cohort
 
 actions:
   - action_show_graduation_data
   - action_store_graduation_data
+  - action_show_research_data
+  - action_store_research_data
+  - action_show_activity_data
+  - action_store_activity_data
+  - action_show_ipk_data
+  - action_store_ipk_data
