--- a/domain.yml
+++ b/domain.yml
@@ -10,19 +10,19 @@ intents:
   - ask_ipk_data
   - inform_ipk_data
   - ask_lecturer_data
-  - inform_lecturer_data
+  - inform_lecturer_data 
 
 entities:
   - year
-  - year_start
-  - year_end
+  - start
+  - end
   - year_range
   - major
+  - publication_type
   - activity_level
   - period
   - cohort
   - faculty
-  - lecturer
 
 slots:
   year:
@@ -32,19 +32,19 @@ slots:
       - type: from_entity
         entity: year
 
-  year_start:
+  start:
     type: text
     influence_conversation: false
     mappings:
       - type: from_entity
-        entity: year_start
+        entity: start
 
-  year_end:
+  end:
     type: text
     influence_conversation: false
     mappings:
       - type: from_entity
-        entity: year_end
+        entity: end
 
   year_range: 
     type: text
@@ -67,6 +67,13 @@ slots:
       - type: from_entity
         entity: period
   
+  publication_type:
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: from_entity
+        entity: publication_type
+
   activity_level:
     type: text
     influence_conversation: false
@@ -87,17 +94,7 @@ slots:
     mappings:
       - type: from_entity
         entity: faculty
-
-  lecturer:
-    type: text
-    influence_conversation: false
-    mappings:
-      - type: from_entity
-        entity: lecturer
     
-
-  
-
 actions:
   - action_show_graduation_data
   - action_store_graduation_data
